--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weekly",
-  "description": "每周分享，记录生活，每周一发布，希望你喜欢",
+  "description": "卷起来，记录生活，希望你喜欢",
   "type": "module",
   "version": "0.2.0",
   "private": true,
